--- a/ProAcc/Views/Resource/ResourceAssessment.cshtml
+++ b/ProAcc/Views/Resource/ResourceAssessment.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ResourceAssessment";
+    ViewBag.Title = "Assessment Resource";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
 
 @Styles.Render("~/Content/css/jqGrid")
 @Scripts.Render("~/bundles/Scripts/jqGrid")
-
+    <a class="card-title">Assessment Resource</a>
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
@@ -300,7 +300,11 @@
                 $(elem).val($.jgrid.parseDate.call(this, cm.formatoptions.newformat, orgValue, "Y-m-d"));
             }
         };
-
+        var rowEdit = function (row) {
+            debugger;
+            if (row == 0)
+                return false;
+        }
 
         $("#jqGrid").jqGrid({
             url: "@Url.Action("GetData","Resource")",
@@ -344,7 +348,15 @@
                     cellEdit: true, edittype: 'select', formatter: 'select',//Add Only
                     editoptions: {
                         value: GetMasterAddAssessment()
-                    }
+                    },
+                    cellbeginedit: rowEdit
+                },
+                 {
+                    label: 'Status', name: 'StatusId', index: 'StatusId', width: 70,  align: 'center', editable: true,hidden: true,
+                    cellEdit: true, edittype: 'select', formatter: 'select',
+                    editoptions: {
+                        value: GetStatusDropDown()
+                    },
                 },
 
                 {
@@ -400,11 +412,41 @@
                 checkOnUpdate: true,
                 checkOnSubmit: true,
                 closeAfterEdit: true,
+                beforeInitData: function (form) {
+                    var id = jQuery("#jqGrid").jqGrid('getGridParam', 'selrow');
+                    var celValue = jQuery("#jqGrid").jqGrid('getCell', id, 'StatusId');
+                    if (celValue == 3 || celValue == 1) {
+                        $.alert({
+                            title: 'Alert !',
+                            content: 'You\'r  not allowed to edit task Which are already closed..! ',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                            icon: 'fa fa-rocket',
+                            animation: 'scale',
+                            closeAnimation: 'scale',
+                            buttons: {
+                                okay: {
+                                    text: 'Okay',
+                                    btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control'
+                                    //action: function (event, ui) {
+                                    //    $(this).remove();
+                                    //    LoadTable(IDInstance);
+                                    //    $('#jqGrid').trigger('reloadGrid');
+                                    //}
+                                }
+                            }
+
+                        });
+
+                        return false;
+                    }
+                    //var Status=$("#" + id + "_StatusId").val();
+                    //alert(id);
+                },
                 beforeShowForm: function (form) {
                     //$("#PhaseId").attr("disabled", "disabled");
                     $(".navButton").hide();
                     $("#tr_PhaseId").hide();
                     $("#tr_SequenceNum").hide();
+                     $("#tr_StatusId").hide();
 
                     $("#Task").attr("disabled", "disabled");
                      $("#RoleID").attr("disabled", "disabled");
@@ -456,7 +498,7 @@
                 //    //        }
                 //    //    });
                 //    //}
-                    
+
                 //},
                 errorTextFormat: function (data) {
                     return 'Error: ' + data.responseText
@@ -530,6 +572,30 @@
                 showQuery: false
             }
         );
+    }
+    function GetStatusDropDown() {
+        var Parameters = {};
+        $.ajax({
+            type: "POST",
+            url: '@Url.Action("GetStatus","ProjectMonitor")',
+            //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
+            dataType: "json",
+            async: false,
+            contentType: "application/json; charset=utf-8",
+            success: function (Data) {
+                //debugger;
+                for (var i = 0; i < Data.length; i++) {
+                    //var obj = {};
+                    var StatusName = Data[i].StatusName;
+                    var key = "" + Data[i].Id;
+                    Parameters[key] = StatusName;
+                }
+            },
+            error: function (data) {
+                alert("GetStatus fail");
+            }
+        });
+        return Parameters;
     }
     function GetPhaseDropDown() {
         var Parameters = {};
