--- a/ProAcc/Views/Resource/ResourceValidation.cshtml
+++ b/ProAcc/Views/Resource/ResourceValidation.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ResourceValidation";
+    ViewBag.Title = "Validation Resource";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
 
 @Styles.Render("~/Content/css/jqGrid")
 @Scripts.Render("~/bundles/Scripts/jqGrid")
-
+    <a class="card-title">Validation Resource</a>
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
