--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -216,7 +216,7 @@
                     success: function (response) {
                         if (response == "success") {
                             $.alert({
-                                title: 'Sucess !',
+                                title: 'Success !',
                                 content: 'Project Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
                                 icon: 'fa fa-rocket',
                                 animation: 'scale',
