--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -323,8 +323,8 @@
                     success: function (response) {
                         if (response == "success") {
                             $.alert({
-                                title: 'Sucess !',
-                                content: 'Customer Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                title: 'Success !',
+                                content: 'Customer Saved successfully..!',
                                 icon: 'fa fa-rocket',
                                 animation: 'scale',
                                 closeAnimation: 'scale',
