--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -64,15 +64,15 @@
     });
 
     $(".editProjectCreation").on("click", function () {
-        
+
         var id = $(this).next().val();
         $.ajax({
             url: '@Url.Action("GetProjCreationById","ProjectCreation")',
             type: "GET",
             data: { id: id },
             //processData: false,
-            
-            success: function (result) { 
+
+            success: function (result) {
 
                 $("#proj_id").val(result.Project_Id);
                 $("#txtProjectName").val(result.Project_Name);
@@ -94,7 +94,7 @@
         });
     });
 
-    $(".btnProjCreationDelete").on("click", function () {
+    @*$(".btnProjCreationDelete").on("click", function () {
         var id = $(this).next().val();
        var retVal = confirm("Do you want to delete ?");
                if( retVal == true ) {
@@ -140,5 +140,80 @@
                } else {
                   return false;
                }
+    });*@
+
+    $(".btnProjCreationDelete").on("click", function () {
+        var id = $(this).next().val();
+        $.confirm({
+              title: 'Delete !',
+              content: 'Do you want to delete ?',
+              icon: 'fa fa-trash-o',
+              animation: 'scale',
+              closeAnimation: 'scale',
+              opacity: 0.5,
+              buttons: {
+                 'confirm': {
+                    text: 'Yes',
+                    btnClass: 'btn-blue',
+                    action: function () {
+                      $.ajax({
+                          type: "POST",
+                           url: '@Url.Action("Delete","ProjectCreation")',
+                           data: { id: id },
+                           dataType: "json",
+                           success: function (response) {
+                              if (response == "success") {
+                                 $.alert({
+                                    title: 'Alert !',
+                                    content: 'Project deleted successfully!..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                                    icon: 'fa fa-rocket',
+                                    animation: 'scale',
+                                    closeAnimation: 'scale',
+                                    buttons: {
+                                       okay: {
+                                          text: 'Okay',
+                                          btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                            action: function (event, ui) {
+                                                $(this).remove();
+                                                location.reload();
+                                            }
+                                       }
+                                    }
+                                 });
+                              }
+                              else {
+                               $.alert({
+                                 title: 'Alert !',
+                                 content: 'Project Instances are in active..!',
+                                 icon: 'fa fa-rocket',
+                                 animation: 'scale',
+                                 closeAnimation: 'scale',
+                                  buttons: {
+                                   okay: {
+                                     text: 'Okay',
+                                     btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                     action: function (event, ui) {
+                                        $(this).remove();
+                                        location.reload();
+                                     }
+                                   }
+                                  }
+                               });
+                              }
+                           },
+                           failure: function (response) {
+                              alert(response.responseText);
+                           },
+                           error: function (response) {
+                               alert(response.responseText);
+                           }
+                      });
+                    }
+                 },
+                 cancel: function(){
+                       $.alert('You clicked on <strong>cancel</strong>');
+                 },
+              }
+         });
     });
 </script>
